Fix broken styles

--- a/app/components/common/paperItem/authors.scss
+++ b/app/components/common/paperItem/authors.scss
@@ -18,6 +18,7 @@
   }
 
   .authorHIndex {
+    position: relative;
     display: inline-flex;
     vertical-align: top;
     height: 18px;
